[project]
name = "strands-st"
version = "0.1.0"
description = "Strands Agent Streamlit Chat App"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nest-asyncio>=1.6.0",
    "pyyaml>=6.0.2",
    "strands-agents>=0.1.6",
    "strands-agents[openai]>=0.1.6",
    "strands-agents-tools>=0.1.2",
    "streamlit>=1.45.1",
    "python-dotenv>=1.0.0",
]
